Mon Sep 11 23:42:28 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Check $CXX not $CC to identify which C++ compiler we
	  have.

Mon Sep 11 16:32:37 BST 2006  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/vectortermlist.h,
	  backends/flint/flint_positionlist.cc,configure.ac,
	  net/remoteconnection.cc,net/tcpclient.cc,
	  queryparser/queryparser.lemony,tests/api_anydb.cc,tests/api_db.cc,
	  tests/api_nodb.cc: I've discovered that -library=stlport4 puts
	  Sun's compiler into an "ANSI C++ compliant" mode, so do that
	  automatically in configure and throw away all the annoying special
	  bits of alternative code we'd accumulated just for this one
	  compiler.

Mon Sep 11 16:01:20 BST 2006  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Speed up deldoc4 when run in verbose mode
	  - some stringstream implementations are very inefficient when
	  the string grows long.

Mon Sep 11 05:30:29 BST 2006  Olly Betts <olly@survex.com>

	* HACKING: Add some advice regarding debugging using -D_GLIBCXX_DEBUG,
	  valgrind, and gdb.

Sun Sep 10 02:24:47 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Fix last check-in to actually work.

Sat Sep 09 04:19:44 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Ensure that if _GLIBCXX_DEBUG has been specified that
	  it also passed when generating version.h.

Sat Sep 09 04:01:40 BST 2006  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: Give more useful output should the double
	  serialisation test fail.

Sat Sep 09 03:19:20 BST 2006  Olly Betts <olly@survex.com>

	* include/xapian/version_h.cc: Add a check that _GLIBCXX_DEBUG is
	  set compatibly if we're compiling with GNU C++.

Sat Sep 09 02:55:38 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_modifiedpostlist.cc: Fix potential access to
	  iterator which has already reached its end.

Fri Sep 08 04:05:28 BST 2006  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc,common/,matcher/bm25weight.cc,