@@ -27,7 +27,7 @@
 
 // Order by did.  Helper comparison template function, which is used as the
 // last fallback by the others.
-template<bool FORWARD_DID, bool CHECK_DID_ZERO> static inline bool
+template<bool FORWARD_DID, bool CHECK_DID_ZERO> inline bool
 msetcmp_by_did(const Xapian::Internal::MSetItem &a,
 	       const Xapian::Internal::MSetItem &b)
 {
@@ -44,7 +44,7 @@ msetcmp_by_did(const Xapian::Internal::MSetItem &a,
 }
 
 // Order by relevance, then docid.
-template<bool FORWARD_DID> static bool
+template<bool FORWARD_DID> bool
 msetcmp_by_relevance(const Xapian::Internal::MSetItem &a,
 		     const Xapian::Internal::MSetItem &b)
 {
@@ -54,7 +54,7 @@ msetcmp_by_relevance(const Xapian::Internal::MSetItem &a,
 }
 
 // Order by value, then docid.
-template<bool FORWARD_VALUE, bool FORWARD_DID> static bool
+template<bool FORWARD_VALUE, bool FORWARD_DID> bool
 msetcmp_by_value(const Xapian::Internal::MSetItem &a,
 		 const Xapian::Internal::MSetItem &b)
 {
@@ -69,7 +69,7 @@ msetcmp_by_value(const Xapian::Internal::MSetItem &a,
 }
 
 // Order by value, then relevance, then docid.
-template<bool FORWARD_VALUE, bool FORWARD_DID> static bool
+template<bool FORWARD_VALUE, bool FORWARD_DID> bool
 msetcmp_by_value_then_relevance(const Xapian::Internal::MSetItem &a,
 				const Xapian::Internal::MSetItem &b)
 {
@@ -86,7 +86,7 @@ msetcmp_by_value_then_relevance(const Xapian::Internal::MSetItem &a,
 }
 
 // Order by relevance, then value, then docid.
-template<bool FORWARD_VALUE, bool FORWARD_DID> static bool
+template<bool FORWARD_VALUE, bool FORWARD_DID> bool
 msetcmp_by_relevance_then_value(const Xapian::Internal::MSetItem &a,
 				const Xapian::Internal::MSetItem &b)
 {
